@@ -1,3 +1,10 @@
+2008-02-25  Sanel <karijes@users.sourceforge.net>
+
+	* Documented Time class
+	* Added system_set() in Time class
+	* Time member set() returns nothing now
+	* Small addition in Date's system_set() so settimeofday() don't fail
+
 2008-02-24  Sanel <karijes@users.sourceforge.net>
 
 	* Added E_RETURN_IF_FAIL and E_RETURN_VAL_IF_FAIL macros
